--- a/public/css/project.css
+++ b/public/css/project.css
@@ -14,3 +14,23 @@
     cursor: pointer;
     background-color: #ddd;
 }
+
+.navbar{
+    margin-bottom: 0;
+}
+
+.container{
+    margin-left: 0;
+}
+
+.sidebar{
+    height: 100%;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    border-right: #DDDDDD 1px;
+}
+
+.content{
+    margin-top: 25px;
+}
