--- a/public/css/project.css
+++ b/public/css/project.css
@@ -19,18 +19,11 @@
     margin-bottom: 0;
 }
 
-.container{
-    margin-left: 0;
-}
-
 .sidebar{
     height: 100%;
     text-align: center;
-    padding: 0;
-    margin: 0;
+    padding-left: 0;
+    margin-left: 0;
+    margin-top: -20px;
     border-right: #DDDDDD 1px;
-}
-
-.content{
-    margin-top: 25px;
 }
