Update checklist css

--- a/public/css/checkList.css
+++ b/public/css/checkList.css
@@ -62,3 +62,13 @@
 .completed{
   margin-top: 20px;
 }
+
+.checklist-item{
+  max-height: 35px;
+}
+
+.icon-checklist{
+  position: relative;
+  top: -8px;
+  background-color: unset;
+}
