--- a/public/css/template.css
+++ b/public/css/template.css
@@ -123,18 +123,27 @@
 .targets .finished{
     text-decoration: line-through;
 }
+
 .file img{
-    max-width: 50px;
+    max-width: 100px;
+    max-height: 100px;
 }
 
 .file{
-    float: left;
     padding: 10px;
     border: 1px solid lightgrey;
     border-radius: 1px;
     text-align: center;
-    margin: 5px;
+    margin: 8px;
+    flex: 30%;
+    max-width: 30%;
+    vertical-align: middle;
+}
 
+.dynamic-layout{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .userlist{
@@ -188,4 +197,37 @@
 .version{
   font-size: 10px;
 }
+
+.inputfile {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+.fileselector{
+    display: inline-block;
+    padding: 6px 12px;
+    margin: 0px;
+    font-size: 16px;
+    font-weight: normal;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    border-radius: 5px;
+    border: none;
+    color: white;
+    background-color: #337ab7;
+    margin-top: 8px;
+}
+
+.fileselector:hover{
+    background-color: #286090;
+}
+
+
+
 /*****************************************************/
