Redesigned Objectives Tab

--- a/public/css/template.css
+++ b/public/css/template.css
@@ -228,6 +228,9 @@
     background-color: #286090;
 }
 
-
+.objective-title{
+    font-size: 18px;
+    margin-top: -3px;
+}
 
 /*****************************************************/
