--- a/public/css/scenario.css
+++ b/public/css/scenario.css
@@ -7,10 +7,16 @@ div.table {
 div.table>.tableRow {
   display: table-row;
 }
+div.table>.tableCreateRow {
+  display: table-row;
+}
 div.table>form.tableRow:hover,  div.table>form.tableRow.active {
   background-color: #ddd;
 }
 div.table>.tableRow>.cell {
+  display: table-cell; vertical-align: middle; padding: 5px;
+}
+div.table>.tableCreateRow>.cell {
   display: table-cell; vertical-align: middle; padding: 5px;
 }
 
