--- a/public/css/scenario.css
+++ b/public/css/scenario.css
@@ -21,12 +21,12 @@ div.table>.tableCreateRow>.cell {
 }
 
 .maquette img{
-  max-width: 100%;
+  max-height: 400px;
+  max-width: 400px
 }
 
-.maquettes{
+.maquettes {
   max-height: 800px;
-  overflow-y: auto;
 }
 
 .over-picture {
